2009-12-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libnetworking/lib/ftpfs.c: Use EINVAL not EBADRQC.

2009-12-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/login_prompt.c: Switch from non-canonical mode with
	timeout (Case C) to blocking IO waiting for single character on
	login. In Case C mode, you cannot tell EOF from no data available.
	This means we cannot tell when a telnet connection is dropped. This
	was changed from 4.9 and resulted in breakage.

2009-12-01	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1474
	* libblock/include/rtems/diskdevs.h, libblock/src/bdbuf.c,
	libblock/src/blkdev.c: Pass only physical disc devices to the block
	device driver.  Reject direct usage of RTEMS_BLKIO_REQUEST though an
	IO control.  Renamed and removed disk device structure access methods.
	* libblock/src/flashdisk.c, libblock/src/nvdisk.c,
	libblock/src/ramdisk-driver.c: Update for block device API change.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/include/rtems/rtems/clock.h: Eliminate unused type
	rtems_clock_time_value.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/termios.c, libfs/src/dosfs/msdos_format.c,
	libfs/src/nfsclient/src/nfs.c, libfs/src/pipe/fifo.c,
	libnetworking/lib/rtems_bsdnet_ntp.c, libnetworking/lib/tftpDriver.c,
	libnetworking/rtems/rtems_glue.c, libnetworking/rtems/rtems_select.c:
	Eliminate uses of deprecated rtems_clock_get() and replace with
	properly typed routine.

2009-12-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* telnetd/telnetd.c: Honor configuration setting for telnet daemon
	stack size.

2009-12-15	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems/include/rtems/rtems/dpmem.h, rtems/include/rtems/rtems/event.h,
	rtems/include/rtems/rtems/message.h,
	rtems/include/rtems/rtems/part.h,
	rtems/include/rtems/rtems/ratemon.h,
	rtems/include/rtems/rtems/region.h,
	rtems/include/rtems/rtems/semmp.h,
	rtems/include/rtems/rtems/signal.h,